// Copyright 2023 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.devicetrust.v1;

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/devicetrust/v1;devicetrustv1";

// Encapsulates the value of a PCR at a point at time.
// See https://pkg.go.dev/github.com/google/go-attestation/attest#PCR
message TPMPCR {
  // the PCR index in the PCR bank
  int32 index = 1;
  // the digest currently held in the PCR
  bytes digest = 2;
  // the hash algorithm used to produce the digest in this PCR bank. This value
  // is the underlying value of the Go crypto.Hash type.
  uint64 digest_alg = 3;
}

// Encapsulates the result of a quote operation against the TPM over a PCR
// using an attestation key.
// See https://pkg.go.dev/github.com/google/go-attestation/attest#Quote
message TPMQuote {
  bytes quote = 1;
  bytes signature = 2;
}

// The quotes, PCRs and event log from a TPM that attest to the booted state
// of the machine.
// See https://pkg.go.dev/github.com/google/go-attestation/attest#PlatformParameters
// Excludes TPMVersion and Public since these are already known values.
message TPMPlatformParameters {
  repeated TPMQuote quotes = 1;
  repeated TPMPCR pcrs = 2;
  bytes event_log = 3;
}

// Holds the record of a TPM platform attestation, including the platform
// parameters sent by the device and the nonce the server generated. This allows
// a historical platform attestation to be revalidated and allows us to compare
// the incoming state of a device (e.g during authentication) against the
// historical state in order to detect potentially malicious actions.
message TPMPlatformAttestation {
  bytes nonce = 1;
  TPMPlatformParameters platform_parameters = 2;
}
